--- a/index.html
+++ b/index.html
@@ -66,15 +66,17 @@
       <div class="container">
         <div class="columns center">
           <div class="column">
-            <h2 class="title center-text">Hey, there! A little info about me.</h2>
+            <h2 class="title center-text">
+              Hey, there! A little info about me.
+            </h2>
             <h2 class="subtitle center-text">
-              My adventure began after moving from Los Angeles, CA to Tampa, FL
-              to work my first job as a developer. I then went to Augusta, GA to
-              continue working as a developer. After some time living in the
-              South, fate took me back to Los Angeles joined a small web team in
-              the film industry. For a good amount of time we all lived in
-              harmony, until COVID-19 attacked. After being laid off due to the
-              economic effects of COVID-19, I am back searching for my next
+              My adventure began when I moved from Los Angeles, CA to Tampa, FL
+              to work my first job as a developer. After a while, I was
+              transferred to an office in Augusta, GA. After some time living in
+              the South, fate took me back to Los Angeles where I  joined a small web
+              team in the film industry. For a good amount of time we all lived
+              in harmony, until COVID-19 attacked. After being laid off due to
+              the economic effects of COVID-19, I am back searching for my next
               adventure.
             </h2>
           </div>
