Added project links

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
               My adventure began when I moved from Los Angeles, CA to Tampa, FL
               to work my first job as a developer. After a while, I was
               transferred to an office in Augusta, GA. After some time living in
-              the South, fate took me back to Los Angeles where I  joined a small web
-              team in the film industry. For a good amount of time we all lived
-              in harmony, until COVID-19 attacked. After being laid off due to
-              the economic effects of COVID-19, I am back searching for my next
-              adventure.
+              the South, fate took me back to Los Angeles where I joined a small
+              web team in the film industry. For a good amount of time we all
+              lived in harmony, until COVID-19 attacked. After being laid off
+              due to the economic effects of COVID-19, I am back searching for
+              my next adventure.
             </h2>
           </div>
         </div>
@@ -152,11 +152,18 @@
         <div class="projects-list">
           <div class="columns">
             <div class="column center-text">
-              <img
-                src="./assets/project-thumbnail.png"
-                alt="COVID-19 Coronavirus Statistics"
-              />
-              <img src="./assets/project-thumbnail.png" alt="Other project" />
+              <a
+                href="http://vuejs-covid19statistics-deploy.s3-website-us-west-1.amazonaws.com/"
+              >
+                <img
+                  src="./assets/project-thumbnail.png"
+                  alt="COVID-19 Coronavirus Statistics"
+                />
+              </a>
+              <a
+                href="http://vuejs-stock-trader-app-deploy.s3-website-us-west-1.amazonaws.com/"
+                ><img src="./assets/project-thumbnail.png" alt="Other project"
+              /></a>
             </div>
           </div>
         </div>
