Added padding and meta description

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Alex Pich's portfolio! Competent and impressive developer + musician.">
     <title>Alex Pich- Developer</title>
     <link
       href="https://fonts.googleapis.com/css?family=Baloo+Thambi+2:400,500,600,700&display=swap"
@@ -11,6 +12,7 @@
     <link rel="stylesheet" href="./css/all.min.css" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
+
   <body>
     <nav class="navbar">
       <div class="container">
@@ -153,6 +155,7 @@
           <div class="columns">
             <div class="column center-text">
               <a
+                class="project-link"
                 href="http://vuejs-covid19statistics-deploy.s3-website-us-west-1.amazonaws.com/"
               >
                 <img
@@ -161,6 +164,7 @@
                 />
               </a>
               <a
+                class="project-link"
                 href="http://vuejs-stock-trader-app-deploy.s3-website-us-west-1.amazonaws.com/"
                 ><img src="./assets/project-thumbnail.png" alt="Other project"
               /></a>
@@ -194,5 +198,7 @@
       </div>
       <div class="copyright center-text"><p>&copy; Alex Pich</p></div>
     </footer>
+
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
   </body>
 </html>
