--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Alex Pich's portfolio! Competent and impressive developer + musician.">
+    <meta
+      name="description"
+      content="Alex Pich's portfolio! Competent and impressive developer + musician."
+    />
     <title>Alex Pich- Developer</title>
     <link
       href="https://fonts.googleapis.com/css?family=Baloo+Thambi+2:400,500,600,700&display=swap"
@@ -97,32 +100,18 @@
               <p class="skill-list-title">Languages:</p>
               <p>JavaScript, jQuery, Java, Python, PHP, SQL, HTML, CSS</p>
 
-              <p class="skill-list-title">Proficient:</p>
+              <p class="skill-list-title">Tools and more:</p>
               <ul>
-                <li>Agile</li>
+                <li>AWS S3, EC2, RDS</li>
                 <li>Bootstrap</li>
+                <li>Figma</li>
                 <li>Git</li>
+                <li>Hibernate</li>
+                <li>Magento 2</li>
                 <li>REST</li>
+                <li>Spring</li>
+                <li>Vue.js</li>
                 <li>Wordpress theme development</li>
-              </ul>
-
-              <p class="skill-list-title">Familiar:</p>
-              <ul>
-                <li>
-                  AWS EC2
-                </li>
-                <li>
-                  Hibernate
-                </li>
-                <li>
-                  Magento 2
-                </li>
-                <li>
-                  Spring
-                </li>
-                <li>
-                  Vue.js
-                </li>
               </ul>
             </div>
 
