Fixed project styling

--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
         <div class="projects-list">
           <div class="columns">
             <div class="column center-text">
+              <!-- COVID19 Statistics -->
               <a
                 class="project-link"
                 href="http://vuejs-covid19statistics-deploy.s3-website-us-west-1.amazonaws.com/"
@@ -152,10 +153,15 @@
                   alt="COVID-19 Coronavirus Statistics"
                 />
               </a>
+              <!-- Stock Trader -->
               <a
                 class="project-link"
                 href="http://vuejs-stock-trader-app-deploy.s3-website-us-west-1.amazonaws.com/"
-                ><img src="./assets/project-thumbnail.png" alt="Other project"
+                ><img src="./assets/project-thumbnail.png" alt="Stock Trader"
+              /></a>
+              <!-- Belly Begone - Fitness Macro Tracker -->
+              <a class="project-link" href="/"
+                ><img src="./assets/project-thumbnail.png" alt="Belly Begone"
               /></a>
             </div>
           </div>
