removed belly-begone

--- a/index.html
+++ b/index.html
@@ -157,11 +157,9 @@
               <a
                 class="project-link"
                 href="http://vuejs-stock-trader-app-deploy.s3-website-us-west-1.amazonaws.com/"
-                ><img src="./assets/project-thumbnail-stock.png" alt="Stock Trader"
-              /></a>
-              <!-- Belly Begone - Fitness Macro Tracker -->
-              <a class="project-link" href="/"
-                ><img src="./assets/project-thumbnail.png" alt="Belly Begone"
+                ><img
+                  src="./assets/project-thumbnail-stock.png"
+                  alt="Stock Trader"
               /></a>
             </div>
           </div>
@@ -193,6 +191,5 @@
       </div>
       <div class="copyright center-text"><p>&copy; Alex Pich</p></div>
     </footer>
-
   </body>
 </html>
