Updating profile image

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <!-- TODO: Add a profile picture -->
               <img
                 class="selfie"
-                src="./assets/selfie.jpg"
+                src="./assets/selfie1.jpg"
                 alt="Alex Pich's selfie"
               />
             </div>
@@ -139,7 +139,6 @@
     <section class="section projects">
       <div class="container">
         <h2 class="center-text">Projects</h2>
-        <p class="center-text">(Coming soon!)</p>
         <div class="projects-list">
           <div class="columns">
             <div class="column center-text">
