--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
               <h2 class="subtitle center-text">
                 Developer + Musician = Rockstar Developer?
               </h2>
-              <!-- TODO: Add a profile picture -->
               <img
                 class="selfie"
                 src="./assets/selfie1.jpg"
@@ -66,7 +65,6 @@
       </div>
     </section>
 
-    <!-- TODO: CSS - Make width less wide on bigger screens -->
     <section class="section description">
       <div class="container">
         <div class="columns center">
@@ -89,7 +87,6 @@
       </div>
     </section>
 
-    <!-- TODO: CSS - Make icons bigger and change color. Make bg color light grey. -->
     <section class="section skills">
       <div class="container">
         <div class="panels">
@@ -129,13 +126,17 @@
               <ul>
                 <li>FL Studio</li>
               </ul>
+
+              <p class="skill-list-title">Sound Design:</p>
+              <ul>
+                <li>Serum</li>
+              </ul>
             </div>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- TODO: Get better images when projects are done -->
     <section class="section projects">
       <div class="container">
         <h2 class="center-text">Projects</h2>
@@ -143,23 +144,34 @@
           <div class="columns">
             <div class="column center-text">
               <!-- COVID19 Statistics -->
-              <a
-                class="project-link"
-                href="http://vuejs-covid19statistics-deploy.s3-website-us-west-1.amazonaws.com/"
-              >
-                <img
-                  src="./assets/project-thumbnail-covid.png"
-                  alt="COVID-19 Coronavirus Statistics"
-                />
-              </a>
+              <div class="project-covid">
+                <a
+                  class="project-link"
+                  href="http://vuejs-covid19statistics-deploy.s3-website-us-west-1.amazonaws.com/"
+                >
+                  <img
+                    src="./assets/project-thumbnail-covid.png"
+                    alt="COVID-19 Coronavirus Statistics"
+                  />
+                  <div class="project-text">
+                    COVID19 Statistics
+                  </div>
+                </a>
+              </div>
+
               <!-- Stock Trader -->
-              <a
-                class="project-link"
-                href="http://vuejs-stock-trader-app-deploy.s3-website-us-west-1.amazonaws.com/"
-                ><img
-                  src="./assets/project-thumbnail-stock.png"
-                  alt="Stock Trader"
-              /></a>
+              <div class="project-stock">
+                <a
+                  class="project-link"
+                  href="http://vuejs-stock-trader-app-deploy.s3-website-us-west-1.amazonaws.com/"
+                  ><img
+                    src="./assets/project-thumbnail-stock.png"
+                    alt="Stock Trader"
+                /></a>
+                <div class="project-text">
+                  Vue Stock Trader
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -173,7 +185,7 @@
         /></a>
         <div class="columns center">
           <p class="quote">
-            Check out my social media down below!
+            Check out my links down below!
           </p>
         </div>
         <div class="social-media">
