Fixed project link

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                 <li>Figma</li>
                 <li>Git</li>
                 <li>Hibernate</li>
+                <li>Laravel</li>
                 <li>Magento 2</li>
                 <li>REST</li>
                 <li>Spring</li>
@@ -167,10 +168,11 @@
                   ><img
                     src="./assets/project-thumbnail-stock.png"
                     alt="Stock Trader"
-                /></a>
-                <div class="project-text">
-                  Vue Stock Trader
-                </div>
+                  />
+                  <div class="project-text">
+                    Vue Stock Trader
+                  </div></a
+                >
               </div>
             </div>
           </div>
