--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <footer class="section footer">
       <div class="container center-text">
         <a href="/" class="logo center">
-          <img src="./assets/logo.png" alt=""
+          <img src="./assets/logo.png" alt="logo"
         /></a>
         <div class="columns center">
           <p class="quote">
