--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Alex Pich's portfolio! Competent and impressive developer + musician."
+      content="Alex Pich's portfolio! Web developer + musician."
     />
     <title>Alex Pich- Developer</title>
     <link
