Updated project links

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
               <div class="project-covid">
                 <a
                   class="project-link"
-                  href="http://vuejs-covid19statistics-deploy.s3-website-us-west-1.amazonaws.com/"
+                  href="http://covid19-statistics.s3-website-us-west-1.amazonaws.com/"
                 >
                   <img
                     src="./assets/project-thumbnail-covid.png"
@@ -163,7 +163,7 @@
               <div class="project-stock">
                 <a
                   class="project-link"
-                  href="http://vuejs-stock-trader-app-deploy.s3-website-us-west-1.amazonaws.com/"
+                  href="http://vue-stock-trader-mock.s3-website-us-west-1.amazonaws.com/"
                   ><img
                     src="./assets/project-thumbnail-stock.png"
                     alt="Stock Trader"
