Added more skills

--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
                 <li>Hibernate</li>
                 <li>Laravel</li>
                 <li>Magento 2</li>
+                <li>React + Next.js</li>
+                <li>React Native</li>
                 <li>REST</li>
                 <li>Spring</li>
                 <li>Vue.js</li>
