Added more skills

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                 <li>Bootstrap</li>
                 <li>Figma</li>
                 <li>Git</li>
+                <li>GraphQL</li>
                 <li>Hibernate</li>
                 <li>Laravel</li>
                 <li>Magento 2</li>
