--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Alex Pich's portfolio! Web developer + musician."
     />
-    <title>Alex Pich- Developer</title>
+    <title>Alex Pich - Developer</title>
     <link
       href="https://fonts.googleapis.com/css?family=Baloo+Thambi+2:400,500,600,700&display=swap"
       rel="stylesheet"
@@ -73,13 +73,10 @@
             </h2>
             <h2 class="subtitle center-text">
               My adventure began when I moved from Los Angeles, CA to Tampa, FL
-              to work my first job as a developer. After a while, I was
-              transferred to an office in Augusta, GA. After some time living in
-              the South, fate took me back to Los Angeles where I joined a small
-              web team in the film industry. For a good amount of time we all
-              lived in harmony, until COVID-19 attacked. After being laid off
-              due to the economic effects of COVID-19, I am back searching for
-              my next adventure.
+              to work my first job as a Java developer. After a while, I was
+              transferred to work for clients in Augusta, GA. After some time
+              living in the South, fate took me back to Los Angeles where I
+              joined a small web team in the film industry.
             </h2>
           </div>
         </div>
@@ -94,18 +91,21 @@
               <i class="fas fa-laptop-code"></i>
               <h2 class="subtitle">Developer</h2>
               <p class="skill-list-title">Languages:</p>
-              <p>JavaScript, jQuery, Java, Python, PHP, SQL, HTML, CSS</p>
+              <p>CSS, HTML, Java, JavaScript, jQuery, Python, SQL</p>
 
               <p class="skill-list-title">Tools and more:</p>
               <ul>
                 <li>AWS S3, EC2, RDS</li>
                 <li>Bootstrap</li>
+                <li>Express</li>
                 <li>Figma</li>
                 <li>Git</li>
                 <li>GraphQL</li>
                 <li>Hibernate</li>
                 <li>Laravel</li>
                 <li>Magento 2</li>
+                <li>Node.js</li>
+                <li>Sequelize</li>
                 <li>React + Next.js</li>
                 <li>React Native</li>
                 <li>REST</li>
@@ -163,7 +163,7 @@
               </div>
 
               <!-- Stock Trader -->
-              <div class="project-stock">
+              <!-- <div class="project-stock">
                 <a
                   class="project-link"
                   href="http://vue-stock-trader-mock.s3-website-us-west-1.amazonaws.com/"
@@ -173,6 +173,21 @@
                   />
                   <div class="project-text">
                     Vue Stock Trader
+                  </div></a
+                >
+              </div> -->
+
+              <!-- Shop ecommerce -->
+              <div class="project-stock">
+                <a
+                  class="project-link"
+                  href="https://shop-next-production.herokuapp.com/"
+                  ><img
+                    src="./assets/project-thumbnail-shop.png"
+                    alt="shop project"
+                  />
+                  <div class="project-text">
+                    SHOP
                   </div></a
                 >
               </div>
