--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
       content="Alex Pich's portfolio! Web developer + musician."
     />
     <title>Alex Pich - Developer</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Baloo+Thambi+2:400,500,600,700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Thambi+2:wght@400;500&family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/all.min.css" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
@@ -91,7 +88,7 @@
               <i class="fas fa-laptop-code"></i>
               <h2 class="subtitle">Developer</h2>
               <p class="skill-list-title">Languages:</p>
-              <p>CSS, HTML, Java, JavaScript, jQuery, Python, SQL</p>
+              <p class="languages">CSS, HTML, Java, JavaScript, jQuery, Python, SQL</p>
 
               <p class="skill-list-title">Tools and more:</p>
               <ul>
