Updated skills and resume

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
           </a>
 
 
-          <ul id="navigation">
+          <!-- <ul id="navigation">
             <li><a href="index.html#contact">Contact</a></li>
 
-          </ul>
+          </ul> -->
         </div>
 
         <div class="left-column">
@@ -94,10 +94,10 @@
           <div id="skills">
             <ul>
               <li>JavaScript</li>
-              <li>React</li>
+              <li>Java</li>
               <li>Python</li>
               <li>Node</li>
-              <li>MySQL</li>
+              <li>React</li>
             </ul>
 
             <ul>
@@ -105,7 +105,7 @@
               <li>React Native</li>
               <li>AWS (RDS/S3)</li>
               <li>Git</li>
-              <li>HTML/CSS</li>
+              <li>SQL</li>
             </ul>
 
           </div>
@@ -172,7 +172,7 @@
     </div>
   </section>
 
-  <section class="s2">
+  <!-- <section class="s2">
     <div class="main-container">
       <a href=""></a>
       <h3 style="text-align: center;">Get In Touch</h3>
@@ -195,7 +195,7 @@
         <input id="submit-btn" type="submit" value="Send">
       </form>
     </div>
-  </section>
+  </section> -->
 
   <script type="text/javascript" src="js/script.js"></script>
 </body>
